<resources>
    <string name="app_name">travel-roulette</string>

    <string name="prefecture_hokkaido">北海道</string>
    <string name="prefecture_aomori">青森</string>
    <string name="prefecture_akita">秋田</string>
    <string name="prefecture_iwate">岩手</string>
    <string name="prefecture_yamagata">山形</string>
    <string name="prefecture_miyagi">宮城</string>
    <string name="prefecture_hukushima">福島</string>
    <string name="prefecture_gunma">群馬</string>
    <string name="prefecture_tochigi">栃木</string>
    <string name="prefecture_saitama">埼玉</string>
    <string name="prefecture_ibaraki">茨城</string>
    <string name="prefecture_tokyo">東京</string>
    <string name="prefecture_chiba">千葉</string>
    <string name="prefecture_kanagawa">神奈川</string>
    <string name="prefecture_nigata">新潟</string>
    <string name="prefecture_nagano">長野</string>
    <string name="prefecture_yamanashi">山梨</string>
    <string name="prefecture_shizuoka">静岡</string>
    <string name="prefecture_toyama">富山</string>
    <string name="prefecture_gihu">岐阜</string>
    <string name="prefecture_aichi">愛知</string>
    <string name="prefecture_ishikawa">石川</string>
    <string name="prefecture_hukui">福井</string>
    <string name="prefecture_shiga">滋賀</string>
    <string name="prefecture_mie">三重</string>
    <string name="prefecture_kyoto">京都</string>
    <string name="prefecture_nara">奈良</string>
    <string name="prefecture_hyogo">兵庫</string>
    <string name="prefecture_osaka">大阪</string>
    <string name="prefecture_wakayama">和歌山</string>
    <string name="prefecture_tottori">鳥取</string>
    <string name="prefecture_okayama">岡山</string>
    <string name="prefecture_shimane">島根</string>
    <string name="prefecture_hiroshima">広島</string>
    <string name="prefecture_yamaguchi">山口</string>
    <string name="prefecture_kagawa">香川</string>
    <string name="prefecture_tokushima">徳島</string>
    <string name="prefecture_ehime">愛媛</string>
    <string name="prefecture_kochi">高知</string>
    <string name="prefecture_hukuoka">福岡</string>
    <string name="prefecture_nagasaki">長崎</string>
    <string name="prefecture_saga">佐賀</string>
    <string name="prefecture_oita">大分</string>
    <string name="prefecture_miyazaki">宮崎</string>
    <string name="prefecture_kumamoto">熊本</string>
    <string name="prefecture_kagoshima">鹿児島</string>
    <string name="prefecture_okinawa">沖縄</string>
    <string name="do_roulette">ルーレット\n回す</string>
    <string name="selected_prefecture">選ばれたのは%sでした</string>
</resources>