<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="isAreaMap"
            type="Boolean" />

        <variable
            name="kyushuPrefecturesState"
            type="List&lt;com.example.travel_roulette.vo.PrefectureState>" />

        <variable
            name="onClickKyushuPrefecture"
            type="com.example.travel_roulette.binding_adapter.SelectPrefectureListener" />

        <import type="java.util.List" />

        <import type="com.example.travel_roulette.vo.Prefecture" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:isDisable="@{isAreaMap}"
        tools:showIn="@layout/fragment_main">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hukuoka"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickKyushuPrefecture.invoke(Prefecture.Hukuoka)}"
            android:text="@string/prefecture_hukuoka"
            app:canSelectPrefecture="@{kyushuPrefecturesState[Prefecture.Hukuoka.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nagasaki"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nagasaki"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickKyushuPrefecture.invoke(Prefecture.Nagasaki)}"
            android:text="@string/prefecture_nagasaki"
            app:canSelectPrefecture="@{kyushuPrefecturesState[Prefecture.Nagasaki.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toStartOf="@id/hukuoka"
            app:layout_constraintStart_toEndOf="@id/saga"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saga"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickKyushuPrefecture.invoke(Prefecture.Saga)}"
            android:text="@string/prefecture_saga"
            app:canSelectPrefecture="@{kyushuPrefecturesState[Prefecture.Saga.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toStartOf="@id/nagasaki"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/oita"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickKyushuPrefecture.invoke(Prefecture.Oita)}"
            android:text="@string/prefecture_oita"
            app:canSelectPrefecture="@{kyushuPrefecturesState[Prefecture.Oita.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/kumamoto"
            app:layout_constraintTop_toBottomOf="@id/hukuoka" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/miyazaki"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickKyushuPrefecture.invoke(Prefecture.Miyazaki)}"
            android:text="@string/prefecture_miyazaki"
            app:canSelectPrefecture="@{kyushuPrefecturesState[Prefecture.Miyazaki.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/kumamoto"
            app:layout_constraintTop_toBottomOf="@id/oita" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/kumamoto"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> onClickKyushuPrefecture.invoke(Prefecture.Kumamoto)}"
            android:text="@string/prefecture_kumamoto"
            app:canSelectPrefecture="@{kyushuPrefecturesState[Prefecture.Kumamoto.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintBottom_toBottomOf="@id/miyazaki"
            app:layout_constraintEnd_toStartOf="@id/oita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nagasaki" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/kagoshima"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickKyushuPrefecture.invoke(Prefecture.Kagoshima)}"
            android:text="@string/prefecture_kagoshima"
            app:canSelectPrefecture="@{kyushuPrefecturesState[Prefecture.Kagoshima.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/miyazaki" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
