<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="isAreaMap"
            type="Boolean" />

        <variable
            name="tohokuPrefecturesState"
            type="List&lt;com.example.travel_roulette.vo.PrefectureState>" />

        <variable
            name="onClickTohokuPrefecture"
            type="com.example.travel_roulette.binding_adapter.SelectPrefectureListener" />

        <import type="java.util.List" />

        <import type="com.example.travel_roulette.vo.Prefecture" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:isDisable="@{isAreaMap}"
        tools:showIn="@layout/fragment_main">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aomori"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickTohokuPrefecture.invoke(Prefecture.Aomori)}"
            android:text="@string/prefecture_aomori"
            app:canSelectPrefecture="@{tohokuPrefecturesState[Prefecture.Aomori.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/akita"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickTohokuPrefecture.invoke(Prefecture.Akita)}"
            android:text="@string/prefecture_akita"
            app:canSelectPrefecture="@{tohokuPrefecturesState[Prefecture.Akita.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toStartOf="@id/iwate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aomori" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iwate"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickTohokuPrefecture.invoke(Prefecture.Iwate)}"
            android:text="@string/prefecture_iwate"
            app:canSelectPrefecture="@{tohokuPrefecturesState[Prefecture.Iwate.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/akita"
            app:layout_constraintTop_toBottomOf="@id/aomori" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yamagata"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickTohokuPrefecture.invoke(Prefecture.Yamagata)}"
            android:text="@string/prefecture_yamagata"
            app:canSelectPrefecture="@{tohokuPrefecturesState[Prefecture.Yamagata.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toStartOf="@id/miyagi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/akita" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/miyagi"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickTohokuPrefecture.invoke(Prefecture.Miyagi)}"
            android:text="@string/prefecture_miyagi"
            app:canSelectPrefecture="@{tohokuPrefecturesState[Prefecture.Miyagi.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/yamagata"
            app:layout_constraintTop_toBottomOf="@id/akita" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hukushima"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickTohokuPrefecture.invoke(Prefecture.Hukushima)}"
            android:text="@string/prefecture_hukushima"
            app:canSelectPrefecture="@{tohokuPrefecturesState[Prefecture.Hukushima.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/miyagi" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
