<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isAreaMap"
            type="Boolean" />

        <variable
            name="chubuPrefecturesState"
            type="List&lt;com.example.travel_roulette.vo.PrefectureState>" />

        <variable
            name="onClickChubuPrefecture"
            type="com.example.travel_roulette.binding_adapter.SelectPrefectureListener" />

        <import type="java.util.List" />

        <import type="com.example.travel_roulette.vo.Prefecture" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isDisable="@{isAreaMap}">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nigata"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> onClickChubuPrefecture.invoke(Prefecture.Nigata)}"
            android:text="@string/prefecture_nigata"
            app:canSelectPrefecture="@{chubuPrefecturesState[Prefecture.Nigata.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintBottom_toTopOf="@id/nagano"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/toyama"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nagano"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> onClickChubuPrefecture.invoke(Prefecture.Nagano)}"
            android:text="@string/prefecture_nagano"
            app:canSelectPrefecture="@{chubuPrefecturesState[Prefecture.Nagano.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintBottom_toTopOf="@id/yamanashi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gihu"
            app:layout_constraintTop_toBottomOf="@id/nigata" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yamanashi"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> onClickChubuPrefecture.invoke(Prefecture.Yamanashi)}"
            android:text="@string/prefecture_yamanashi"
            app:canSelectPrefecture="@{chubuPrefecturesState[Prefecture.Yamanashi.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintBottom_toTopOf="@id/shizuoka"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/aichi"
            app:layout_constraintTop_toBottomOf="@id/nagano" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="aichi,yamanashi" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shizuoka"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickChubuPrefecture.invoke(Prefecture.Shizuoka)}"
            android:text="@string/prefecture_shizuoka"
            app:canSelectPrefecture="@{chubuPrefecturesState[Prefecture.Shizuoka.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/barrier"
            app:layout_constraintVertical_bias="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toyama"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickChubuPrefecture.invoke(Prefecture.Toyama)}"
            android:text="@string/prefecture_toyama"
            app:canSelectPrefecture="@{chubuPrefecturesState[Prefecture.Toyama.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toStartOf="@id/nigata"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gihu"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> onClickChubuPrefecture.invoke(Prefecture.Gihu)}"
            android:text="@string/prefecture_gihu"
            app:canSelectPrefecture="@{chubuPrefecturesState[Prefecture.Gihu.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintBottom_toBottomOf="@id/nagano"
            app:layout_constraintEnd_toStartOf="@id/nagano"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toyama" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aichi"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickChubuPrefecture.invoke(Prefecture.Aichi)}"
            android:text="@string/prefecture_aichi"
            app:canSelectPrefecture="@{chubuPrefecturesState[Prefecture.Aichi.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toStartOf="@id/yamanashi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gihu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
