<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isAreaMap"
            type="Boolean" />

        <variable
            name="chugokuPrefecturesState"
            type="List&lt;com.example.travel_roulette.vo.PrefectureState>" />

        <variable
            name="onClickChugokuPrefecture"
            type="com.example.travel_roulette.binding_adapter.SelectPrefectureListener" />

        <import type="java.util.List" />

        <import type="com.example.travel_roulette.vo.Prefecture" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isDisable="@{isAreaMap}"
        tools:showIn="@layout/fragment_main">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tottori"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickChugokuPrefecture.invoke(Prefecture.Tottori)}"
            android:text="@string/prefecture_tottori"
            app:canSelectPrefecture="@{chugokuPrefecturesState[Prefecture.Tottori.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shimane"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okayama"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickChugokuPrefecture.invoke(Prefecture.Okayama)}"
            android:text="@string/prefecture_okayama"
            app:canSelectPrefecture="@{chugokuPrefecturesState[Prefecture.Okayama.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hiroshima"
            app:layout_constraintTop_toBottomOf="@id/tottori" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shimane"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickChugokuPrefecture.invoke(Prefecture.Shimane)}"
            android:text="@string/prefecture_shimane"
            app:canSelectPrefecture="@{chugokuPrefecturesState[Prefecture.Shimane.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toStartOf="@id/tottori"
            app:layout_constraintStart_toEndOf="@id/yamaguchi"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hiroshima"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onClickChugokuPrefecture.invoke(Prefecture.Hiroshima)}"
            android:text="@string/prefecture_hiroshima"
            app:canSelectPrefecture="@{chugokuPrefecturesState[Prefecture.Hiroshima.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintEnd_toStartOf="@id/okayama"
            app:layout_constraintStart_toEndOf="@id/yamaguchi"
            app:layout_constraintTop_toBottomOf="@id/shimane" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yamaguchi"
            style="@style/WhiteOutLinedButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> onClickChugokuPrefecture.invoke(Prefecture.Yamaguchi)}"
            android:text="@string/prefecture_yamaguchi"
            app:canSelectPrefecture="@{chugokuPrefecturesState[Prefecture.Yamaguchi.ordinal()]}"
            app:isDisable="@{!isAreaMap}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/hiroshima"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
